--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,45 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Oxanium',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100%;
+  background-color: black;
+  overflow-x: hidden;
+
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 1px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color:  rgb(54, 255, 0);
+  border-radius: 10px;
+}
+
+/*html{*/
+/*  scrollbar-color: rgb(54, 255, 0) rgba(224, 224, 224, 0);*/
+/*  scrollbar-width: thin;*/
+/*}*/
+
+
+#root{
+  width: 100%;
+  height: 100%;
+
 }
 
 code {
